lowercase file names

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 								</header>
 								<content>
 									<ul id="carousel" class="elastislide-list">
-										<li><img src="images/small/1.JPG" class="fancybox" alt="image01" /></li>
-										<li><a href="#"><img src="images/small/2.JPG" class="fancybox" alt="image02" /></a></li>
+										<li><img src="images/small/1.jpg" class="fancybox" alt="image01" /></li>
+										<li><a href="#"><img src="images/small/2.jpg" class="fancybox" alt="image02" /></a></li>
 										<li><a href="#"><img src="images/small/3.jpg" class="fancybox" alt="image03" /></a></li>
 										<li><a href="#"><img src="images/small/4.jpg" class="fancybox" alt="image04" /></a></li>
 										<li><a href="#"><img src="images/small/5.jpg" class="fancybox" alt="image05" /></a></li>
