Adding compressed images

--- a/index.html
+++ b/index.html
@@ -178,22 +178,16 @@
 								</header>
 								<content>
 									<ul id="carousel" class="elastislide-list">
-										<li><img src="images/small/1.jpg" class="fancybox" alt="image01" /></li>
-										<li><a href="#"><img src="images/small/2.jpg" class="fancybox" alt="image02" /></a></li>
-										<li><a href="#"><img src="images/small/3.jpg" class="fancybox" alt="image03" /></a></li>
-										<li><a href="#"><img src="images/small/4.jpg" class="fancybox" alt="image04" /></a></li>
-										<li><a href="#"><img src="images/small/5.jpg" class="fancybox" alt="image05" /></a></li>
-										<li><a href="#"><img src="images/small/6.jpg" class="fancybox" alt="image06" /></a></li>
-										<li><a href="#"><img src="images/small/7.jpg" class="fancybox" alt="image07" /></a></li>
-										<li><a href="#"><img src="images/small/8.jpg" class="fancybox" alt="image08" /></a></li>
-										<li><a href="#"><img src="images/small/9.jpg" class="fancybox" alt="image09" /></a></li>
-										<li><a href="#"><img src="images/small/10.jpg" class="fancybox" alt="image10" /></a></li>
-										<li><a href="#"><img src="images/small/11.jpg" class="fancybox" alt="image11" /></a></li>
-										<li><a href="#"><img src="images/small/12.jpg" class="fancybox" alt="image12" /></a></li>
-										<li><a href="#"><img src="images/small/13.jpg" class="fancybox" alt="image13" /></a></li>
-										<li><a href="#"><img src="images/small/14.jpg" class="fancybox" alt="image14" /></a></li>
-										<li><a href="#"><img src="images/small/15.jpg" class="fancybox" alt="image15" /></a></li>
-										<li><a href="#"><img src="images/small/16.jpg" class="fancybox" alt="image16" /></a></li>
+										<li><img src="images/min/1-min.jpg" class="fancybox" alt="image01" /></li>
+										<li><a href="#"><img src="images/min/2-min .jpg" class="fancybox" alt="image02" /></a></li>
+										<li><a href="#"><img src="images/min/3-min.jpg" class="fancybox" alt="image03" /></a></li>
+										<li><a href="#"><img src="images/min/4-min.jpg" class="fancybox" alt="image04" /></a></li>
+										<li><a href="#"><img src="images/min/5-min.jpg" class="fancybox" alt="image05" /></a></li>
+										<li><a href="#"><img src="images/min/6-min.jpg" class="fancybox" alt="image06" /></a></li>
+										<li><a href="#"><img src="images/min/7-min.jpg" class="fancybox" alt="image07" /></a></li>
+										<li><a href="#"><img src="images/min/11-min.jpg" class="fancybox" alt="image07" /></a></li>
+										<li><a href="#"><img src="images/min/12-min.jpg" class="fancybox" alt="image07" /></a></li>
+										<li><a href="#"><img src="images/min/17-min.jpg" class="fancybox" alt="image07" /></a></li>
 									</ul>
 								</content>
 							</section>
