--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					<br>
 					<div class="row">
 						<div class="col-sm-6 slideanim">
-							<span class="image"><a href="www.numerify.com/"><img style="width:260px; height: 110px;" src="img/numerify.png"/></a></span>
+							<span class="image"><a href="https://www.numerify.com/"><img style="width:260px; height: 110px;" src="img/numerify.png"/></a></span>
 							<h4></h4>
 							<p><br /></p><br />
 						</div>
@@ -297,7 +297,7 @@
 							<p>Bangalore (June 2015- March 2016)</p> <br>
 						</div>  
 						<div class="col-sm-6 slideanim">
-							<span class="image"><a href="www.numerify.com/"><img style="width:260px; height: 110px;" src="img/numerify.png"/></a></span>
+							<span class="image"><a href="https://www.numerify.com/"><img style="width:260px; height: 110px;" src="img/numerify.png"/></a></span>
 							<h4></h4>
 							<p><br /></p><br />
 						</div>
