--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         
 		<div class="video-container">
 		<div class="container" style="width: inherit;">
-					<video autoplay loop class="fillWidth" style="display: inherit;">
+					<video autoplay loop preload class="fillWidth" style="display: inherit;">
 					<source src="assets/code.mp4" type="video/mp4" />
 					</video>
 					
