--- a/index.html
+++ b/index.html
@@ -99,8 +99,20 @@
     <header>
         
 		<div class="video-container">
-		<div class="container" style="width: inherit;">
-					<video autoplay loop preload class="fillWidth" style="display: inherit;">
+		<div class="container" style="width: inherit; 
+		      	position: fixed;
+    			top: 0;
+    			right: 0;
+		 	bottom: 0;
+    			left: 0;
+		 	overflow: hidden;
+    			z-index: -100;">
+					<video autoplay loop preload class="fillWidth" style="display: inherit; 
+											      position: absolute;
+											      top: 0;
+											      left: 0;
+											      width: 100%;
+											      height: 100%;">
 					<source src="assets/code.mp4" type="video/mp4" />
 					</video>
 					
