Tried some changes on the video
Inserted some inline style

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     			left: 0;
 		 	overflow: hidden;
     			z-index: -100;">
-					<video autoplay loop preload class="fillWidth" style="display: inherit; 
+					<video autoplay loop muted preload class="fillWidth" style="display: inherit; 
 											      position: absolute;
 											      top: 0;
 											      left: 0;
