--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <header>
         
 		<div class="video-container">
-		<div class="container" style="width: inherit; 
+		<div class="container" style=" 
 		      	position: fixed;
     			top: 0;
     			right: 0;
@@ -107,7 +107,7 @@
     			left: 0;
 		 	overflow: hidden;
     			z-index: -100;">
-					<video autoplay loop muted preload class="fillWidth" style="display: inherit; 
+					<video autoplay loop muted preload class="fillWidth" style=" 
 											      position: absolute;
 											      top: 0;
 											      left: 0;
