--- a/index.html
+++ b/index.html
@@ -100,9 +100,21 @@
         
 		<div class="video-container">
 		<div class="container" style="width: inherit;">
-					<video autoplay loop muted preload class="fillWidth" style="display: inherit;">
-					<source src="assets/code.mp4" type="video/mp4" />
-					</video>
+					<video autoplay="" loop="" class="fillWidth fadeIn animated" 
+              style="
+              position: absolute;
+                top: 50%;
+                left: 50%;
+                min-width: 100%;
+                min-height: 100%;
+                width: auto;
+                height: auto;
+                z-index: 0;
+                transform: translateX(-50%) translateY(-50%);
+                background-size: cover;
+                transition: 1s opacity;">
+              <source src="assets/code.mp4" type="video/mp4">
+            </video>
 					
             <div class="row">
                 <div class="col-lg-12">
