--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					
 					<div class="row">
 						<div class="row">
-						  <div class="col-sm-6 slideanim">
+						  <div class="col-sm-6 slideanim" style="margin-top:30px">
 							<i class="fa fa-graduation-cap logo-small"></i>
 							<h4>DEGREE</h4>
 							<p>Master of Information Systems Management<br>2017-Present</p> <br>
