--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1">
-                    <p>I am Disha Nathani, a Software engineer by profession and an artist by choice. I love programming. Being good at problem solving and observing Big Data and analytics change the world, I plan to embark my journey in big data and Analytics. My ultimate aim in life is to leverage technology for the social development.</p>
+                    <p>I am Disha Nathani, a Software engineer by profession and an artist by choice. I love programming. My ultimate aim in life is to leverage technology for the social development.</p>
                 </div>
                 <div class="col-lg-5">
                     <p>I am inspired by Dr.A.P.J. Abdul Kalam and I strongly believe that deep in the depth of all of us lies a secret longing to do something beautifully great. Apart from my career I enjoy reading, traveling and in my free time, you would find me sketching, painting or solving some puzzles</p>
